[project]
name = "hyperliquid-docs"
version = "0.1.0"
description = "Community mirror of Hyperliquid documentation, auto-synced from Gitbook"
requires-python = ">=3.11"
dependencies = ["requests>=2.32"]

[project.optional-dependencies]
dev = ["ruff", "mypy", "types-requests"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
strict = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
